Align display text correctly

--- a/styles.css
+++ b/styles.css
@@ -20,19 +20,29 @@ body {
     border: solid 1px black;
     box-sizing: border-box;
     padding: 10px;
-    text-align: right;
 }
 
 .display {
+    display: flex;
+    align-items: flex-end;
+    width: fit-content;
+    height: fit-content;
+}
+
+.display-text {
     box-sizing: border-box;
-    padding: 10px;
     width: 300px;
+    height: 60px;
+    padding: 10px;
+    font-size: 36px;
+    text-align: right;
+    vertical-align: middle;
 }
 
 .display-buttons {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 60px;
     width: 80px;
 }
